--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>كتالوج منتجات</title>
+  <title>كتالوج bbbbbbbbbbbbbbbbbb</title>
 
   <style>
     * { box-sizing: border-box; }
@@ -129,3 +129,4 @@
 
 </body>
 </html>
+
